@@ -1,5 +1,8 @@
 2007-11-11  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgst-plugin-feature.c: supported load.
+	* test/test_plugin_feature.rb: added a test for load.
+
 	* sample/gst-inspect.rb: starting rewrite.
 
 	* src/rbgst-type-find-factory.c: added NULL check.
